# sriniv-project-ii

./: ARCHITECTURE.md  LICENSE  README.md
backend/: config.py  main.py  requirements.txt
backend/analysis/: match_scoring.py  profile_builder.py  skill_gap.py
backend/api/: analytics.py  documents.py  evaluation.py  interview.py  questions.py  realtime.py  router.py
backend/core/: embeddings.py  llm.py  rag.py  stt.py
backend/data/: question_templates.json  rubrics.json  skill_taxonomy.json
backend/db/: database.py  vector_store.py
backend/models/: profile.py  schemas.py  session.py
backend/parsers/: jd_parser.py  resume_parser.py
backend/reasoning/: adaptive_controller.py  atom_of_thoughts.py  hybrid_engine.py  skill_atoms.py  tree_of_thoughts.py
backend/tests/: test_audit_fixes.py  test_bugfixes.py  test_imports.py
frontend/: index.html  overlay.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatBubble.tsx  FileUpload.tsx  Layout.tsx  OverlayPanel.tsx  ProgressChart.tsx  ScoreCard.tsx  Sidebar.tsx  SkillHeatmap.tsx
frontend/src/hooks/: useApi.ts  useAudio.ts  useInterview.ts
frontend/src/overlay/: OverlayApp.tsx  OverlayControls.tsx  QuickChat.tsx  StatusBar.tsx  SuggestionPanel.tsx  TranscriptPanel.tsx  main.tsx  overlay.css
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  (+4 more)
scripts/: dev.sh  setup.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  commands.rs  lib.rs  main.rs  overlay.rs  screen_capture.rs  shortcuts.rs  transcription.rs  tray.rs
(+8 files in other folders)
