[package]
name = "interviewpilot"
version = "0.1.0"
description = "AI-powered interview coach for macOS"
authors = ["InterviewPilot"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "interviewpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-nspanel = { git = "https://github.com/nicehash/tauri-nspanel", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
whisper-rs = "0.12"
screenshots = "0.8"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
dirs = "5"
parking_lot = "0.12"
anyhow = "1"
image = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSObject"] }
objc2-app-kit = { version = "0.2", features = ["NSWindow", "NSPanel", "NSResponder"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
incremental = true
